Add hub and spoke model

--- a/diabetes.html
+++ b/diabetes.html
@@ -39,67 +39,67 @@
             </header>
 
             <article id="diabetesPage">
-                <h1>Case Study: Enhancing Diabetes Education Website</h1>
+                <h1>Designing an Engaging Learning Journey</h1>
                 <img src="image/diabetes.jpg" alt="">
                 <section>
-                    <h2>Overview</h2>
-                    <p>In response to the rising need for diabetes awareness, this case study explores the development
-                        of an educational website focused on type 2 diabetes. The initiative aims to address the lack of
-                        understanding and misconceptions surrounding the causes, onset, and management of this prevalent
-                        health condition.</p>
+                    <h2>Introduction</h2>
+                    <p>This case study explores the intentional design of an engaging learning journey for high school
+                        students with limited knowledge about diabetes and the body's energy processes.</p>
 
-                    <h2>Background</h2>
-                    <p>Insufficient awareness about type 2 diabetes has led to widespread misconceptions. This project
-                        recognizes the importance of dispelling these myths and providing accurate information to the
-                        target audience. The limited understanding of the roles played by the pancreas and insulin,
-                        coupled with a general lack of awareness about how the body utilizes food for energy, further
-                        underscores the need for an educational platform.
+                    <h2>Objective</h2>
+                    <p>The primary objective is to integrate the design process into the teaching methodology, ensuring
+                        that each element of the hub-and-spoke model contributes to an effective and engaging learning
+                        experience for high school students.
                     </p>
                 </section>
 
                 <section>
-                    <h2>Objectives:</h2>
-                    <ol>
-                        <li>Educational Focus: Develop content that educates high school students about type 2 diabetes.
+                    <h2>Implementation</h2>
+                    <ul>
+                        <li><strong>Educational Focus:</strong> Develop content that educates high school students about
+                            type 2 diabetes.
                         </li>
-                        <li>Visual Representation: Include visuals and engaging graphics to enhance understanding.</li>
-                        <li>Comprehensive Coverage: Address key aspects, such as the pancreas, insulin, and the body's
+                        <li><strong>Visual Representation:</strong> Include visuals and engaging graphics to enhance
+                            understanding.</li>
+                        <li><strong>Comprehensive Coverage:</strong> Address key aspects, such as the pancreas, insulin,
+                            and the body's
                             energy utilization from food.</li>
-                        <li>Preventive Measures: Outline practical steps to delay the onset of type 2 diabetes.</li>
-                    </ol>
+                        <li><strong>Preventive Measures:</strong> Outline practical steps to delay the onset of type 2
+                            diabetes.</li>
+                    </ul>
                 </section>
 
-                <section>
+                <section id="designProcess">
                     <h2>Design Process:</h2>
                     <p>
-                        The focus is on seizing an opportunity to educate a target audience that lacks knowledge,
-                        particularly emphasizing the significance of raising awareness due to the prevalence of diabetes
-                        diagnoses among youth.
+                        Employing the
+                        hub-and-spoke model, this approach aims to build a solid foundation before delving into the
+                        intricacies of Type 2 diabetes.
+                    <div>
+                        <img src="image/diabetesHubAndSpoke.jpg" alt="">
+                    </div>
                     </p>
                 </section>
 
                 <section>
-                    <h2>Define</h2>
-                    <h3>Project Milestones</h3>
-                    <p>
-                        Project Brief (7 days): Develop project scope, goals, and target audience.
-                        Sketches and Storyboard (8 days):Create design concepts and user flow.
-                        Project Draft (14 days): Develop a high-fidelity prototype.
-                        Design Submission (6 days): Code the responsive website.
-                    </p>
+                    <h2>Define: Project Milestones</h2>
+                    <ul>
+                        <li><strong>Project Brief (7 days):</strong> Develop project scope, goals, and target audience.
+                        </li>
+                        <li><strong>Sketches and Storyboard (8 days):</strong> Create design concepts and user flow.
+                        </li>
+                        <li><strong>Project Draft (14 days):</strong> Develop a high-fidelity prototype.</li>
+                        <li><strong>Design Submission (6 days):</strong> Code the responsive website.</li>
+                    </ul>
 
-                </section>
 
-                <section>
-                    <h3>Viable Timeline</h3>
-                    <p><strong>May 22nd - June 26th</strong></p>
                 </section>
 
                 <section id="diabetesMockups">
                     <h2>Low and High-Fidelity Mockups</h2>
                     <div>
                         <img src="image/diabetesWireframe.jpg" alt="">
-                        <img src="image/diabetesMobile.jpg" alt="">
+                        <img src="image/diabetesMain.jpg" alt="">
                     </div>
                 </section>
 
