--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h3>Diabetes Education</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="image/desktopMockup.jpg" alt="Project Image">
+                        <div class="imgContainer"><img src="image/desktopMockup.jpg" alt="Project Image"></div>
                         <figcaption>
                             <p>Exploring the development of a diabetes education website, this case study delves into
                                 addressing critical gaps in awareness about type 2 diabetes. From educating high school
@@ -61,9 +61,8 @@
                     </figure>
                     <p>Read the <a class="colorLinks" href="diabetes.html">Diabetes Case Study</a></p>
 
-                    <p>View the <a class="colorLinks" href="https://cindyannroberts.github.io/Diabetes-Edu/"
-                            target="_blank">Diabetes
-                            Education Website on GitHub</a></p>
+                    <a class="colorLinks" href="https://cindyannroberts.github.io/Diabetes-Edu/" target="_blank">View
+                        the code on GitHub</a>
                 </article>
 
                 <article id="easyBank">
@@ -71,12 +70,13 @@
                     <a href="https://cindyannroberts.github.io/easybank/"></a>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="image/easyBankScreenshot.png" alt="Project Image">
+                        <div class="imgContainer"><img src="image/easyBankScreenshot.png" alt="Project Image"></div>
                         <figcaption>
-                            <p>I turned a Figma design into a website, making sure it looks and works just like the
-                                original. I used HTML for the structure and CSS for the design, creating a
-                                responsive
-                                and interactive web page.</p>
+                            <p>Successfully translated a Figma design to match the original concept. Employing HTML for
+                                structural elements and CSS for precise design implementation, I crafted a responsive
+                                and
+                                interactive web page that seamlessly mirrors the intended aesthetic and functionality.
+                            </p>
                         </figcaption>
                     </figure>
                     <a class="colorLinks" href="https://cindyannroberts.github.io/easybank/" target="_blank">View
@@ -90,7 +90,7 @@
                     <h3>Luna Fairy</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="image/croppedFairy.png" alt="Project Image">
+                        <div class="imgContainer"><img src="image/LunaFairy.jpg" alt="Project Image"></div>
                         <figcaption>
                             <p>Explore the enchanting journey of creating the "Luna Fairy" book cover, where
                                 imaginative
@@ -105,11 +105,11 @@
                 </article>
 
                 <article id="nikeAd">
-                    <h3>Case Study: Nike Sneaker AD - Be Explosive</h3>
+                    <h3>Nike Sneaker AD - Be Explosive</h3>
                     <!-- Project details, images, and description go here -->
 
                     <figure>
-                        <img src="image/largeDisplayADMockup.jpg" alt="Project Image">
+                        <div class="imgContainer"><img src="image/largeDisplayADMockup.jpg" alt="Project Image"></div>
                         <figcaption>Step into a world of explosive style with Nike Sneakers – where bold design
                             meets
                             unrivaled performance. Unleash your potential and be explosive with every step. Discover
@@ -123,8 +123,8 @@
                 </article>
 
                 <article id="Greenleaf">
-                    <h3>Greenleaf Cafe Promotional Poster Card</h3>
-                    <img src="image/greenLeafCafe.jpg" alt="Print Design Project 2">
+                    <h3>Greenleaf Cafe Poster Card</h3>
+                    <div class="imgContainer"><img src="image/greenLeafCafe.jpg" alt="Print Design Project 2"></div>
                     <p>The Greenleaf Cafe Promotional Poster Card project aims to create an eye-catching and
                         inviting
                         design to promote a special offer for cafe guests. The focus is on encouraging customers to
@@ -137,7 +137,7 @@
 
                 <article id="travel">
                     <h3>World Travel</h3>
-                    <img src="image/WorldTravel.jpg" alt="">
+                    <div class="imgContainer"><img src="image/WorldTravel.jpg" alt=""></div>
                     <p>Turn your dream vacation into reality. Visit World Travel.com to explore our unique destination
                         experiences and start planning your customized getaway today</p>
                     <a class="colorLinks" href="worldTravel.html">Read more about the project</a>
