add box shadow to portfolio grid

--- a/index.html
+++ b/index.html
@@ -84,8 +84,6 @@
                     </a>
                 </article>
 
-
-
                 <article id="fairyBook">
                     <h3>Luna Fairy</h3>
                     <!-- Project details, images, and description go here -->
@@ -116,8 +114,7 @@
                             the
                             essence of greatness in every stride. </figcaption>
                     </figure>
-                    <p>Read the <a class="colorLinks" href="nikeAd.html">Nike Sneaker AD - Be Explosive Case
-                            Study</a>
+                    <a class="colorLinks" href="nikeAd.html">Read more about the project</a>
                     </p>
 
                 </article>
@@ -138,8 +135,9 @@
                 <article id="travel">
                     <h3>World Travel</h3>
                     <div class="imgContainer"><img src="image/WorldTravel.jpg" alt=""></div>
-                    <p>Turn your dream vacation into reality. Visit World Travel.com to explore our unique destination
-                        experiences and start planning your customized getaway today</p>
+                    <p>Embark on the journey of a lifetime with World Travel.com, where your dream vacation transforms
+                        into reality. Immerse yourself in our curated collection of unique destination experiences,
+                        tailored to create unforgettable memories. </p>
                     <a class="colorLinks" href="worldTravel.html">Read more about the project</a>
                 </article>
             </section>
