--- a/nikeAd.html
+++ b/nikeAd.html
@@ -57,6 +57,7 @@
                     <img src="image/nikeInspiration.png" alt="">
 
                 </section>
+
                 <section>
                     <h2>Creative Process</h2>
                     <p>To heighten visual
@@ -65,7 +66,7 @@
                         Furthermore, a levels adjustment enhanced vibrance by (+26) and subtly decreased saturation by
                         (-2), resulting in a dynamic and bold aesthetic that maintained a balanced color palette.</p>
                 </section>
-                <div id="imagesCombined">
+                <div id="nikeImageContainer">
                     <img src="image/fire.jpg" alt="">
                     <img src="image/redNikeSneakers.jpg" alt="">
                     <img src="image/fireAndSneaker.png" alt="">
