Change portfolio grid

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                     <img src="image/RobertsProfile-Small01.jpg"
                         alt="Professional studio portrait of Cindy-Ann Roberts, UX Designer and Front End Developer">
                 </div>
-                <h1><span>Crafting a Unique Journey:</span> From Healthcare to UX Design</h1>
+                <h1>Crafting a Unique Journey:From Healthcare to UX Design</h1>
 
                 <p>Hello again! I'm a passionate UX Designer and Front End Developer on a
                     transformative journey from healthcare to the dynamic world of user experience. My background in
