--- a/diabetes.html
+++ b/diabetes.html
@@ -40,7 +40,7 @@
 
             <article id="diabetesPage">
                 <h1>Designing an Engaging Learning Journey</h1>
-                <img src="image/diabetes.jpg" alt="">
+                <img id="diabetesPageImg" src="image/diabetes.jpg" alt="">
                 <section>
                     <h2>Introduction</h2>
                     <p>This case study explores the intentional design of an engaging learning journey for high school
@@ -100,6 +100,10 @@
                     <div>
                         <img src="image/diabetesWireframe.jpg" alt="">
                         <img src="image/diabetesMain.jpg" alt="">
+                        <img src="image/diabetesSuperfoods.jpg" alt="">
+                        <img src="image/diabetesSuperfoodsMobile.jpg" alt="">
+                        <img src="image/diabetesExercise.jpg" alt="">
+                        <img src="image/diabetesMenu.jpg" alt="">
                     </div>
                 </section>
 
