--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2>Explore My Work</h2>
 
                 <article id="diabetes">
-                    <h3>Diabetes Education</h3>
+                    <h3>Diabetes Education App</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
                         <div class="imgContainer"><img src="image/desktopMockup.jpg" alt="Project Image"></div>
@@ -66,7 +66,7 @@
                 </article>
 
                 <article id="easyBank">
-                    <h3>Easy bank</h3>
+                    <h3>Easybank Landing Page</h3>
                     <a href="https://cindyannroberts.github.io/easybank/"></a>
                     <!-- Project details, images, and description go here -->
                     <figure>
@@ -85,7 +85,7 @@
                 </article>
 
                 <article id="fairyBook">
-                    <h3>Luna Fairy</h3>
+                    <h3>Luna Fairy Book Cover</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
                         <div class="imgContainer"><img src="image/LunaFairy.jpg" alt="Project Image"></div>
@@ -99,7 +99,7 @@
                         </figcaption>
                     </figure>
 
-                    <p>Read the <a class="colorLinks" href="lunaFairy.html">Luna Fairy Case Study</a></p>
+                    <a class="colorLinks" href="lunaFairy.html">Read more about the project</a>
                 </article>
 
                 <article id="nikeAd">
@@ -133,7 +133,7 @@
                 </article>
 
                 <article id="travel">
-                    <h3>World Travel</h3>
+                    <h3>World Travel Billboard</h3>
                     <div class="imgContainer"><img src="image/WorldTravel.jpg" alt=""></div>
                     <p>Embark on the journey of a lifetime with World Travel.com, where your dream vacation transforms
                         into reality. Immerse yourself in our curated collection of unique destination experiences,
